# SoftwareRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glPipeline.txt
src/: bitmap.c  bitmap.h  bresenham.c  bresenham.h  camera.c  camera.h  debugRenderer.c  debugRenderer.h  display.c  display.h  geometry.c  geometry.h  input.c  input.h  lodepng.c  lodepng.h  main.c  model.c  model.h  objfile.c  objfile.h  postProcess.c  postProcess.h  postprocess.c  postprocess.h  rendercontext.c  rendercontext.h  renderer.c  renderer.h  shader.c  shader.h  shaderutils.c  shaderutils.h  stopwatch.c  stopwatch.h  textrenderer.c  textrenderer.h  uniforms.c  uniforms.h
